fixed: z-index of notification

--- a/wall/res/static/client.css
+++ b/wall/res/static/client.css
@@ -147,6 +147,7 @@ body
     background: rgba(0, 0, 0, 0.9);
     display: none;
     position: fixed;
+    z-index: 100;
     left: 0;
     top: 0;
     padding: 0.3em;
